--- a/vignettes/blueprint-july.Rmd
+++ b/vignettes/blueprint-july.Rmd
@@ -64,7 +64,7 @@ These are:
 ## Use of Data from the USA {#usa-data}
 
 ```{r}
-human_population <- 1000000
+human_population <- 600000
 
 parameters_list_usa <- get_parameters(list(human_population = human_population, 
                                            seed = 1, 
