--- a/vignettes/helios.Rmd
+++ b/vignettes/helios.Rmd
@@ -32,6 +32,7 @@ library(individual)
 library(ggplot2)
 library(dplyr, warn.conflicts = FALSE)
 library(purrr)
+library(tictoc)
 theme_set(theme_minimal())
 ```
 
